<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="AUTOMATION_RUNNER_DIAGNOSTICS" Id="{abe4ac9d-925d-4d89-96b8-639221428dee}">
    <Declaration><![CDATA[TYPE AUTOMATION_RUNNER_DIAGNOSTICS :
STRUCT
	HandleEnabledStateError : AUTOMATION_RUNNER_ERROR_LOG;
	HandleSimulationModeStateError : AUTOMATION_RUNNER_ERROR_LOG;
	
	InitializationError : AUTOMATION_RUNNER_ERROR_LOG;
	
	CriticalRunningOrStopingError : AUTOMATION_RUNNER_ERROR_LOG;
	
	LastRuningNonCriticalError : AUTOMATION_RUNNER_ERROR_LOG;
	LastStopingNonCriticalError : AUTOMATION_RUNNER_ERROR_LOG;
	
	HandleFaultError : AUTOMATION_RUNNER_ERROR_LOG;	
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>