<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="AUTOMATION_RUNNER_ERROR_LOG" Id="{05878944-5a7a-4222-8e66-d9de192d2acb}">
    <Declaration><![CDATA[(*

.. <legal notes>

legal notes
=================
| SPDX-FileCopyrightText: © 2025 Oleksandr Tiutyk <trofimich@gmail.com>
| SPDX-License-Identifier: LGPL-3.0-only
| For details check: LGPL-3.0-only_

.. _LGPL-3.0-only: https://www.gnu.org/licenses/lgpl-3.0.en.html

.. </legal notes>

*)

TYPE AUTOMATION_RUNNER_ERROR_LOG :
STRUCT
	ShortMessage : ERROR_MESSAGE;
	FullMessage : ERROR_MESSAGE;
	Source : WSTRING(300);
	LocalTimestamp : LDATE_AND_TIME;	
	UtcTimestamp : LDATE_AND_TIME;	
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>