<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="AUTOMATION_RUNNER_STATE" Id="{e0aa6b66-b856-4339-85da-3620262659fe}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
{attribute 'to_string'}
TYPE AUTOMATION_RUNNER_STATE :
(
	INITIALIZING := 0, // It acts until at least one unit has not completed initialization
    RUNNING := 1, // Normal running            
	EMERGENCY := 2,	// Emergency stop initiated
    FAULT := 3 // Any error occurred while initializing or fatal error in other modes
);
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>